creted a clear function for user

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
           </button>
         </div>
         <h2 class="mt-5">To Pay:<span id="all-total"> 00</span></h2>
+        <button id="btn-clear" class="btn-success  py-2 rounded mt-3 px-3">Clear</button>
       </div>
     </div>
     <!-- add javascript  -->
